Fixed crossfader misalignment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -241,6 +241,8 @@ div#crossfade {
   padding: 150px 1% 0 2%;
 }
 div#crossfade-control {
+  width: 90%;
+  margin: 0 auto;
   background: #000;
   border: 0;
   height: 10px;
@@ -254,6 +256,7 @@ div#crossfade-control a {
   top: -11px;
   border-radius: 3px;
   -webkit-box-shadow: inset 0 0 5px #555;
+  margin-left: -19px;
 }
 div#crossfade-control a:hover, div#crossfade-control a.ui-state-active { -webkit-box-shadow: inset 0 0 10px #999; }
 
